1 Fix Disqus wrap

--- a/css/planetaDesktop.css
+++ b/css/planetaDesktop.css
@@ -432,5 +432,7 @@ display: none;
 }
 
 #disqus_thread{
-  margin-top: 80px;
+  margin-top: 120px;
+  width: 90vw;
+  margin-left: 5vw;
 }
